# unlimited-money-ltd

./: .gitignore  CMakeLists.txt  README.md  config.json
include/: Config.hpp  DataParser.hpp  PlotRenderer.hpp  StockClient.hpp
src/: Config.cpp  DataParser.cpp  PlotRenderer.cpp  StockClient.cpp  main.cpp
